# async-python-sprint-3

./: .gitignore  README.md  client.py  pyproject.toml  server.py  settings.py  test_server.py
.github/workflows/: app-testing.yml
model/: chat.py  custom_http.py  exceptions.py
router/: chat_router.py
service/: chat.py
utils/: logging_config.py
