[tool.poetry]
name = "async-python-sprint-3"
version = "0.1.0"
description = ""
authors = ["Shumakova Evgeniia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
mashumaro = "^3.9.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
